--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
   function generarArticulos(nombreCategoria) {
     const datosPorCategoria = {
       "Motor": {
-        precios: [650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
+        precios: ["Motor completo para yanaha r15"650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
         imagenes: [
           "https://2.bp.blogspot.com/_nhBrldq4F08/TPQ0lWv0h0I/AAAAAAAAAKo/bo1DOGNw6YI/s1600/yamaha_yzf_r15_150cc_engine-vixion.jpg",
           "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor2",
