--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
   function generarArticulos(nombreCategoria) {
     const datosPorCategoria = {
       "Motor": {
-        precios: ["Motor completo para yanaha r15"650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
+        precios: [650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
         imagenes: [
           "https://2.bp.blogspot.com/_nhBrldq4F08/TPQ0lWv0h0I/AAAAAAAAAKo/bo1DOGNw6YI/s1600/yamaha_yzf_r15_150cc_engine-vixion.jpg",
           "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor2",
@@ -273,6 +273,18 @@
           "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor8",
           "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor9",
           "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor10"
+        ]
+        descripciones: [
+         "Motor Yamaha 150cc de alto rendimiento.",
+         "Bloque de motor reforzado para motocross.",
+         "Kit de cilindro con pistón incluido.",
+         "Cigüeñal templado para máxima durabilidad.",
+         "Cabezal de motor optimizado para flujo de aire.",
+         "Bomba de aceite de alta presión.",
+         "Árbol de levas de competición.",
+         "Juego de válvulas de titanio.",
+         "Motor completo reacondicionado.",
+         "Sistema de encendido electrónico de alto voltaje."
         ]
       }
     };
