--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     mostrarCarrito();
   }
 
-  function generarArticulos(nombreCategoria) {
+ function generarArticulos(nombreCategoria) {
   const datosPorCategoria = {
     "Motor": {
       nombres: [
@@ -298,49 +298,69 @@
         "Motor completo reacondicionado.",
         "Sistema de encendido electrónico de alto voltaje."
       ]
-    }
-  function generarArticulos(nombreCategoria) {
-  const datosPorCategoria = {
+    },
     "Suspencion": {
       nombres: [
-        "Motor Yamaha 150cc",
-        "Bloque Reforzado MX",
-        "Kit de Cilindro y Pistón",
-        "Cigüeñal Templado",
-        "Cabezal Optimizado",
-        "Bomba de Aceite HP",
-        "Árbol de Levas Racing",
-        "Válvulas de Titanio",
-        "Motor Reacondicionado",
-        "Encendido Electrónico"
+        "Amortiguador Trasero Pro",
+        "Resorte de Suspensión Alta",
+        "Suspensión Hidráulica Frontal",
+        "Kit de Horquilla Deportiva",
+        "Soporte de Amortiguador CNC",
+        "Amortiguador con Gas Nitrogenado",
+        "Suspensión Ajustable Racing",
+        "Horquilla Telescópica Premium",
+        "Sistema de Doble Amortiguador",
+        "Buje de Suspensión Reforzado"
       ],
-      precios: [650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
+      precios: [430, 390, 610, 550, 470, 490, 650, 720, 580, 600],
       imagenes: [
-        "https://2.bp.blogspot.com/_nhBrldq4F08/TPQ0lWv0h0I/AAAAAAAAAKo/bo1DOGNw6YI/s1600/yamaha_yzf_r15_150cc_engine-vixion.jpg",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor2",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor3",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor4",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor5",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor6",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor7",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor8",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor9",
-        "https://via.placeholder.com/150/0000FF/FFFFFF?text=Motor10"
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp1",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp2",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp3",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp4",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp5",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp6",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp7",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp8",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp9",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp10"
       ],
       descripciones: [
-        "Motor Yamaha 150cc de alto rendimiento.",
-        "Bloque de motor reforzado para motocross.",
-        "Kit de cilindro con pistón incluido.",
-        "Cigüeñal templado para máxima durabilidad.",
-        "Cabezal de motor optimizado para flujo de aire.",
-        "Bomba de aceite de alta presión.",
-        "Árbol de levas de competición.",
-        "Juego de válvulas de titanio.",
-        "Motor completo reacondicionado.",
-        "Sistema de encendido electrónico de alto voltaje."
+        "Amortiguador trasero con mayor absorción de impacto.",
+        "Resorte de acero templado para uso extremo.",
+        "Suspensión hidráulica de respuesta rápida.",
+        "Horquilla delantera para manejo deportivo.",
+        "Soporte de aluminio mecanizado por CNC.",
+        "Amortiguador con carga de gas para estabilidad.",
+        "Suspensión trasera ajustable en altura.",
+        "Horquilla premium para todo terreno.",
+        "Doble amortiguador con mayor capacidad de carga.",
+        "Buje reforzado para uso intensivo."
       ]
     }
   };
+
+  const datos = datosPorCategoria[nombreCategoria] || {
+    nombres: Array(10).fill(`${nombreCategoria} Artículo`),
+    precios: Array(10).fill(499),
+    imagenes: Array(10).fill("https://via.placeholder.com/150"),
+    descripciones: Array(10).fill(`Descripción del artículo de la categoría ${nombreCategoria}.`)
+  };
+
+  const articulos = [];
+
+  for (let i = 0; i < 10; i++) {
+    articulos.push({
+      nombre: datos.nombres[i] || `${nombreCategoria} Artículo ${i + 1}`,
+      descripcion: datos.descripciones[i] || `Descripción del artículo ${i + 1}`,
+      precio: datos.precios[i],
+      img: datos.imagenes[i]
+    });
+  }
+
+  return articulos;
+}
+
 
   const datos = datosPorCategoria[nombreCategoria] || {
     nombres: Array(10).fill(`${nombreCategoria} Artículo`),
