--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
     mostrarCarrito();
   }
 
- function generarArticulos(nombreCategoria) {
+ <script>
+function generarArticulos(nombreCategoria) {
   const datosPorCategoria = {
     "Motor": {
       nombres: [
@@ -361,6 +362,3 @@
   return articulos;
 }
 </script>
-
-</body>
-</html>
