--- a/index.html
+++ b/index.html
@@ -358,7 +358,9 @@ function generarArticulos(nombreCategoria) {
       img: datos.imagenes[i]
     });
   }
-
-  return articulos;
+   return articulos;
 }
 </script>
+
+</body>
+</html>
