--- a/index.html
+++ b/index.html
@@ -262,16 +262,9 @@
   const datosPorCategoria = {
     "Motor": {
       nombres: [
-        "Motor Yamaha 150cc",
-        "Bloque Reforzado MX",
-        "Kit de Cilindro y Pistón",
-        "Cigüeñal Templado",
-        "Cabezal Optimizado",
-        "Bomba de Aceite HP",
-        "Árbol de Levas Racing",
-        "Válvulas de Titanio",
-        "Motor Reacondicionado",
-        "Encendido Electrónico"
+        "Motor Yamaha 150cc", "Bloque Reforzado MX", "Kit de Cilindro y Pistón",
+        "Cigüeñal Templado", "Cabezal Optimizado", "Bomba de Aceite HP",
+        "Árbol de Levas Racing", "Válvulas de Titanio", "Motor Reacondicionado", "Encendido Electrónico"
       ],
       precios: [650, 720, 580, 900, 750, 820, 610, 670, 790, 850],
       imagenes: [
@@ -297,6 +290,38 @@
         "Juego de válvulas de titanio.",
         "Motor completo reacondicionado.",
         "Sistema de encendido electrónico de alto voltaje."
+      ]
+    },
+    "Suspencion": {
+      nombres: [
+        "Amortiguador Trasero Pro", "Resorte de Suspensión Alta", "Suspensión Hidráulica Frontal",
+        "Kit de Horquilla Deportiva", "Soporte de Amortiguador CNC", "Amortiguador con Gas Nitrogenado",
+        "Suspensión Ajustable Racing", "Horquilla Telescópica Premium", "Sistema de Doble Amortiguador", "Buje de Suspensión Reforzado"
+      ],
+      precios: [430, 390, 610, 550, 470, 490, 650, 720, 580, 600],
+      imagenes: [
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp1",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp2",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp3",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp4",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp5",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp6",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp7",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp8",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp9",
+        "https://via.placeholder.com/150/FF0000/FFFFFF?text=Susp10"
+      ],
+      descripciones: [
+        "Amortiguador trasero con mayor absorción de impacto.",
+        "Resorte de acero templado para uso extremo.",
+        "Suspensión hidráulica de respuesta rápida.",
+        "Horquilla delantera para manejo deportivo.",
+        "Soporte de aluminio mecanizado por CNC.",
+        "Amortiguador con carga de gas para estabilidad.",
+        "Suspensión trasera ajustable en altura.",
+        "Horquilla premium para todo terreno.",
+        "Doble amortiguador con mayor capacidad de carga.",
+        "Buje reforzado para uso intensivo."
       ]
     }
   };
