--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         "Sistema de encendido electrónico de alto voltaje."
       ]
     },
-    "Suspencion": {
+    "Suspension": {
       nombres: [
         "Amortiguador Trasero Pro", "Resorte de Suspensión Alta", "Suspensión Hidráulica Frontal",
         "Kit de Horquilla Deportiva", "Soporte de Amortiguador CNC", "Amortiguador con Gas Nitrogenado",
