--- a/index.html
+++ b/index.html
@@ -323,7 +323,39 @@
         "Doble amortiguador con mayor capacidad de carga.",
         "Buje reforzado para uso intensivo."
       ]
-    }
+    },
+    "Frenos": {
+  nombres: [
+    "Disco de Freno Ventilado", "Pastillas de Freno Cerámicas", "Caliper de Aluminio Reforzado",
+    "Kit Hidráulico de Frenado", "Sensor ABS Universal", "Líquido de Freno DOT 5.1",
+    "Rotor Flotante Racing", "Tambores de Freno Premium", "Kit de Frenos de Disco Trasero", "Palanca de Freno CNC"
+  ],
+  precios: [520, 310, 680, 750, 290, 120, 610, 430, 780, 340],
+  imagenes: [
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno1",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno2",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno3",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno4",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno5",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno6",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno7",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno8",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno9",
+    "https://via.placeholder.com/150/000000/FFFFFF?text=Freno10"
+  ],
+  descripciones: [
+    "Disco ventilado de alto rendimiento para mejor enfriamiento.",
+    "Pastillas cerámicas que reducen el desgaste y ruido.",
+    "Caliper ligero y resistente para frenado deportivo.",
+    "Sistema hidráulico completo para máxima respuesta.",
+    "Sensor ABS compatible con múltiples modelos.",
+    "Líquido de freno de alta temperatura.",
+    "Rotor flotante para motocicletas de competición.",
+    "Tambores reforzados para frenado eficiente.",
+    "Conversión a frenos de disco trasero incluidos.",
+    "Palanca ajustable fabricada en CNC aluminio."
+  ]
+},
   };
 
   const datos = datosPorCategoria[nombreCategoria] || {
