--- a/index.html
+++ b/index.html
@@ -355,7 +355,40 @@
     "Conversión a frenos de disco trasero incluidos.",
     "Palanca ajustable fabricada en CNC aluminio."
   ]
-},
+   },
+    "Accesorios": {
+  nombres: [
+    "Espejos Laterales Plegables", "Puños Antideslizantes", "Cubrepuños Deportivos",
+    "Kit de Luces LED", "Soporte para Teléfono", "Cargador USB Impermeable",
+    "Parabrisas Ajustable", "Alforjas Laterales Rígidas", "Protector de Manetas", "Tapa de Tanque Decorativa"
+  ],
+  precios: [250, 130, 180, 310, 160, 140, 400, 580, 200, 120],
+  imagenes: [
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc1",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc2",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc3",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc4",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc5",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc6",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc7",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc8",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc9",
+    "https://via.placeholder.com/150/00FF00/FFFFFF?text=Acc10"
+  ],
+  descripciones: [
+    "Espejos plegables ideales para ciudad o carretera.",
+    "Puños antideslizantes para mayor control y confort.",
+    "Cubrepuños con diseño aerodinámico.",
+    "Kit LED para faros delanteros y traseros.",
+    "Soporte universal para celular resistente a vibraciones.",
+    "Cargador USB doble con protección contra agua.",
+    "Parabrisas transparente con regulación de altura.",
+    "Alforjas resistentes al agua con gran capacidad.",
+    "Protector de manetas con diseño deportivo.",
+    "Tapa de tanque cromada para personalización."
+  ]
+}
+
   };
 
   const datos = datosPorCategoria[nombreCategoria] || {
