--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     "Arnés específico para instalación de luces LED."
   ]
   },
-    "Transmisiones": {
+    "Transmision": {
   nombres: [
     "Cadena de Transmisión 520", "Piñón de 14 Dientes", "Corona de Transmisión 38 Dientes",
     "Kit de Transmisión Completo", "Cadena 530 con O-Ring", "Piñón de 17 Dientes",
@@ -484,7 +484,7 @@
     "Escape Vance & Hines, ideal para motos de alto rendimiento y estilo único."
   ]
  },
-  "Equipo de Protección": {
+  "Equipo de Proteccion": {
   nombres: [
     "Casco Integral HJC RPHA 11", "Guantes Alpinestars Supertech M10", "Botas Sidi Crossfire 3",
     "Chaqueta Dainese Racing", "Rodilleras Leatt 3DF", "Protector de Espalda Alpinestars Bionic",
