--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     "Escape Vance & Hines, ideal para motos de alto rendimiento y estilo único."
   ]
  },
-  "Equipo de Proteccion": {
+  "Equipo de proteccion": {
   nombres: [
     "Casco Integral HJC RPHA 11", "Guantes Alpinestars Supertech M10", "Botas Sidi Crossfire 3",
     "Chaqueta Dainese Racing", "Rodilleras Leatt 3DF", "Protector de Espalda Alpinestars Bionic",
