--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
       cursor: pointer;
       font-size: 16px;
     }
+    #inicio {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* centra verticalmente */
+      align-items: center;     /* centra horizontalmente */
+      height: 100vh;           /* altura total del viewport */
+      text-align: center;      /* centra el texto dentro de los elementos */
+}
     .header-flex {
       display: flex;
       align-items: center;
