--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       gap: 20px;
       margin-top: 20px;
     }
-    .inicio {
+    #inicio {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -153,10 +153,10 @@
       <a href="catalogo">
         <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Refacción de motor">
       </a>
-      <a href="catalogo">
+      <a href="#catalogo">
         <img src="imagenes/llanta.png" alt="Llanta para motocicleta">
       </a>
-      <a href="catalogo">
+      <a href="#catalogo">
         <img src="imagenes/casco.png" alt="Casco de seguridad">
       </a>
     </div>
