--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       gap: 20px;
       margin-top: 20px;
     }
-    #inicio {
+    .inicio {
       display: flex;
       align-items: center;
       justify-content: center;
