--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </ul>
     </div>
     <div class="imagenes">
-      <a href="catalogo">
+      <a href="#catalogo">
         <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Refacción de motor">
       </a>
       <a href="#catalogo">
