--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     nav a:hover { background-color: #666; }
     section { display: none; padding: 20px; }
     section.active { display: block; }
+    html {
+      scroll-behavior: smooth;
+    }
+
     .catalogo {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
