--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     nav a:hover { background-color: #666; }
     section { display: none; padding: 20px; }
     section.active { display: block; }
-    html {
-      scroll-behavior: smooth;
-    }
 
     .catalogo {
       display: grid;
@@ -155,7 +152,7 @@
     </div>
     <div class="imagenes">
       <a href="#catalogo">
-        <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Refacción de motor">
+        <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Ir al catalogo">
       </a>
       <a href="#catalogo">
         <img src="imagenes/llanta.png" alt="Llanta para motocicleta">
