--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </ul>
     </div>
     <div class="imagenes">
-      <a href="#catalogo">
+      <a href="#catalogo" onclick="mostrarSeccion('catalogo')">
         <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Ir al catalogo">
       </a>
       <a href="#catalogo">
