--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     <div class="imagenes">
         <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Ir al catalogo">
       </a
-        <img src="imagenes/llanta.png" alt="Llanta para motocicleta">
+        <img src="https://th.bing.com/th/id/OIP.IJbRumQSlbppBqJKFLkU2QHaDx?w=700&h=357&rs=1&pid=ImgDetMain" alt="Llanta para motocicleta">
       </a>
-        <img src="imagenes/casco.png" alt="Casco de seguridad">
+        <img src="https://th.bing.com/th/id/OIP.Cf5C1l9lNycns6zt6CwCWAHaCs?rs=1&pid=ImgDetMain" alt="Casco de seguridad">
       </a>
     </div>
   </div>
