--- a/index.html
+++ b/index.html
@@ -137,27 +137,44 @@
   <a onclick="mostrarSeccion('carro')">Carro de Compras</a>
 </nav>
 
-<section id="inicio" class="active">
-  <div class="inicio-contenido">
-    <div class="texto">
-      <h1>Bienvenido a Refaccionaria "Vazquez"</h1>
-      <p>Somos tu aliado confiable en refacciones para todo tipo de motocicletas. Calidad, servicio y compromiso nos distinguen.</p>
-      <ul>
-        <li>🔧 Refacciones originales y genéricas</li>
-        <li>🏍️ Accesorios para todo tipo de motocicletas</li>
-        <li>🛠️ Servicio técnico especializado</li>
-      </ul>
+<section id="inicio" class="active" style="text-align: center; padding: 40px 20px;">
+  <div class="inicio-contenido" style="max-width: 900px; margin: 0 auto;">
+    <h1 style="font-size: 2.5em; color: #2c3e50;">Bienvenido a Refaccionaria "Vazquez"</h1>
+    <p style="font-size: 1.2em; color: #555;">Tu aliado confiable en refacciones para todo tipo de motocicletas.</p>
+
+    <p style="margin-top: 20px;">
+      En Refaccionaria "Vazquez", nos dedicamos a ofrecer productos de la más alta calidad para mantener tu motocicleta en óptimas condiciones. Ya seas un aficionado o un profesional del motociclismo, encontrarás todo lo que necesitas con nosotros.
+    </p>
+
+    <ul style="list-style: none; padding: 0; margin: 30px 0; font-size: 1.1em;">
+      <li>🔧 Refacciones originales y genéricas</li>
+      <li>🏍️ Accesorios para todo tipo de motocicletas</li>
+      <li>🛠️ Servicio técnico especializado</li>
+      <li>🚚 Envíos rápidos y seguros</li>
+      <li>💳 Pagos seguros y flexibles</li>
+    </ul>
+
+    <!-- Primera fila de imágenes -->
+    <div class="imagenes" style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-top: 40px;">
+      <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Refacción de motor" style="width: 250px; border-radius: 8px;">
+      <img src="https://th.bing.com/th/id/OIP.IJbRumQSlbppBqJKFLkU2QHaDx?w=700&h=357&rs=1&pid=ImgDetMain" alt="Llanta para motocicleta" style="width: 250px; border-radius: 8px;">
+      <img src="https://th.bing.com/th/id/OIP.Cf5C1l9lNycns6zt6CwCWAHaCs?rs=1&pid=ImgDetMain" alt="Casco de seguridad" style="width: 250px; border-radius: 8px;">
     </div>
-    <div class="imagenes">
-        <img src="https://th.bing.com/th/id/R.13bc4b3164ab373ac0d70371707a660c?rik=o9Uhu4%2fg%2bPz4RA&pid=ImgRaw&r=0" alt="Ir al catalogo">
-      </a
-        <img src="https://th.bing.com/th/id/OIP.IJbRumQSlbppBqJKFLkU2QHaDx?w=700&h=357&rs=1&pid=ImgDetMain" alt="Llanta para motocicleta">
-      </a>
-        <img src="https://th.bing.com/th/id/OIP.Cf5C1l9lNycns6zt6CwCWAHaCs?rs=1&pid=ImgDetMain" alt="Casco de seguridad">
-      </a>
+
+    <!-- Texto adicional -->
+    <p style="margin-top: 40px;">
+      Nuestra misión es garantizar que cada cliente salga satisfecho. Te ayudamos a elegir la pieza correcta, resolver dudas técnicas y hacer que el mantenimiento de tu moto sea fácil y eficiente. Visítanos o explora nuestro catálogo en línea para más detalles.
+    </p>
+
+    <!-- Segunda fila de imágenes -->
+    <div class="imagenes" style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-top: 30px;">
+      <img src="https://th.bing.com/th/id/OIP.Z_buYBhklNR2fpctogzV7wHaFj?rs=1&pid=ImgDetMain" alt="Aceites y lubricantes" style="width: 250px; border-radius: 8px;">
+      <img src="https://th.bing.com/th/id/OIP.B-Y4KNt5CzzAIy0RWNj4twHaEK?rs=1&pid=ImgDetMain" alt="Baterías para moto" style="width: 250px; border-radius: 8px;">
+      <img src="https://th.bing.com/th/id/OIP.YzDLhxEKIReMbPXr3PYcBAHaE8?rs=1&pid=ImgDetMain" alt="Kit de herramientas" style="width: 250px; border-radius: 8px;">
     </div>
   </div>
 </section>
+
 
 
 <section id="nosotros">
