--- a/index.html
+++ b/index.html
@@ -22,41 +22,43 @@
     }
     #inicio {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 10vh;
+      justify-content: center;
+      height: 100vh;
+      background-color: #f8f9fa;
       text-align: center;
-}
+      padding: 20px;
+   }
 
-   .inicio-contenido {
-       display: flex;
-       flex-direction: row;
-       gap: 40px;
-       max-width: 1200px;
-       align-items: center;
-      flex-wrap: wrap;
-    }
+  .inicio-contenido {
+      display: flex;
+     flex-direction: row;
+     gap: 40px;
+     max-width: 1200px;
+     align-items: center;
+     flex-wrap: wrap;
+   }
 
-    .texto {
+   .texto {
       flex: 1;
-       min-width: 300px;
-    }
+      min-width: 300px;
+   }
 
-    .imagenes {
-       flex: 1;
-       display: flex;
-       justify-content: center;
-       flex-wrap: wrap;
-       gap: 20px;
-    }
+   .imagenes {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+   }
 
-    .imagenes img {
-         width: 150px;
-         height: auto;
-         border-radius: 8px;
-         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
+  .imagenes img {
+       width: 150px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+   }
+
 
     .item, .producto {
       border: 1px solid #ccc;
@@ -197,12 +199,6 @@
   <a href="https://www.google.com.mx/maps/@19.5572742,-97.25585,17z?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank" style="display: inline-block; padding: 12px 24px; background-color: #4169E1; color: white; text-decoration: none; border-radius: 6px; font-size: 1em;">
     Ver ubicación en Google Maps
   </a>
-</section>
-
-
-<section id="novedades">
-  <h2>Novedades</h2>
-  <p>¡Revisa nuestras nuevas refacciones y promociones especiales!</p>
 </section>
 
 <section id="catalogo">
